--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,19 @@
 server:
   port: 8111
+  servlet:
+    context-path: /user
 
 spring:
   main:
     allow-circular-references: true
   application:
     name: CMS-Auth-Service
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   datasource:
     url: jdbc:mysql://b6060dfffd3b4a:4deab34a@us-cdbr-east-06.cleardb.net/heroku_58fbec60b723d43?reconnect=true
+#    url: jdbc:mysql://localhost:3306/cms_auth
 #    username: root
 #    password: Dev@#$123
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,6 +29,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: https://cms-discovery.herokuapp.com/eureka
+#      defaultZone: http://localhost:8761/eureka
   instance:
     preferIpAddress: true
 
