--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   datasource:
-    url: ${DB_URL:jdbc:mysql://43.205.229.17:3306/cms_auth}
+    url: ${DB_URL:jdbc:mysql://localhost:3306/cms_auth}
     username: ${DB_USERNAME:user}
     password: ${DB_PASSWORD:Dev@#$123}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -28,7 +28,7 @@ springdoc:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${DEFAULT_ZONE:http://ec2-65-2-131-246.ap-south-1.compute.amazonaws.com:8761/eureka}
+      defaultZone: ${DEFAULT_ZONE:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
 
