--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       matching-strategy: ant_path_matcher
   datasource:
     url: ${DB_URL:jdbc:mysql://localhost:3306/cms_auth}
-    username: ${DB_USERNAME:user}
+    username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:Dev@#$123}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
